<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_bg"
              android:orientation="vertical">

    <com.deepai.dapanorama.view.widget.TitleView
        style="@style/Title"
        app:titleNameText="@string/login"
        />

    <LinearLayout
        style="@style/MainEditText"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_vertical_margin_big"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <!-- <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="@dimen/common_margin_small"
             android:src="@drawable/icon_username" />-->

        <EditText
            android:id="@+id/et_phone_num_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="number"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        style="@style/MainEditText"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <!-- <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="@dimen/common_margin_small"
             android:src="@drawable/icon_password" />-->

        <EditText
            android:id="@+id/et_pwd_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_login"
        style="@style/MainButton"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_vertical_margin_big"
        android:enabled="false"
        android:text="@string/login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin">

        <CheckBox
            android:id="@+id/check_disclaimer"
            style="@style/CustomCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/common_padding"
            android:paddingLeft="@dimen/common_padding_small"
            android:paddingRight="@dimen/common_padding_tiny"
            android:paddingTop="@dimen/common_padding"
            />

        <TextView
            android:id="@+id/tv_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/check_disclaimer"
            android:paddingBottom="@dimen/common_padding"
            android:paddingLeft="@dimen/common_padding_small"
            android:paddingRight="@dimen/common_padding_tiny"
            android:paddingTop="@dimen/common_padding"
            android:text="@string/disclaimer"
            android:textColor="@color/common_blue"/>

        <TextView
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/common_margin"
            android:text="@string/forgot_pwd_with_symbol"
            android:textColor="@color/common_white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/common_margin"
            android:text="@string/login_third"
            android:textColor="@color/common_white"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/common_margin_small"
            android:drawableTop="@mipmap/login_wechat"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/tv_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/common_margin_small"

            android:layout_marginLeft="@dimen/common_margin_large"
            android:drawableTop="@mipmap/login_qq"
            android:textSize="@dimen/text_size_small"/>


        <TextView
            android:id="@+id/tv_login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_large"
            android:drawablePadding="@dimen/common_margin_small"
            android:drawableTop="@mipmap/login_weibo"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/tv_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_large"
            android:drawablePadding="@dimen/common_margin_small"
            android:drawableTop="@mipmap/login_facebook"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/tv_login_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_large"
            android:drawablePadding="@dimen/common_margin_small"
            android:drawableTop="@mipmap/login_twitter"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_large"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/common_margin"
            android:text="@string/register_now"
            android:textColor="@color/common_white"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>